--- a/manifest.json
+++ b/manifest.json
@@ -1,34 +1,26 @@
 {
-	"manifest_version": 2,
-
+	"manifest_version": 3,
 	"name": "Epoch Converter",
-	"description": "Provides a popup showing a human readable date of a highlighted Unix timestamp.",
-	"version": "1.0.2",
-    
-    "icons": { 
-        "16": "icon.png",
-        "48": "icon.png",
-        "128": "icon.png"
-    },
-
+	"description": "Showing in the context menu a human readable date of a highlighted Unix timestamp.",
+	"version": "2.0.0",
+	"icons": {
+		"16": "icon.png",
+		"48": "icon.png",
+		"128": "icon.png"
+	},
 	"permissions": [
-		
+		"contextMenus"
 	],
-
 	"content_scripts": [
 		{
-			"matches": ["<all_urls>"],
-            "css": ["bubble.css"],
-			"js": ["jquery.min.js", "selection.js"],
-            "all_frames": true
+			"matches": [
+				"<all_urls>"
+			],
+			"css": [],
+			"js": [
+				"selection.js"
+			],
+			"all_frames": true
 		}
-	],
-    
-    "web_accessible_resources": [
-        "close.png"
-    ],
-
-	"browser_action": {
-		"default_icon": "icon.png"
-	}
+	]
 }
