--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
 	"manifest_version": 3,
 	"name": "Epoch Converter",
-	"description": "Showing in the context menu a human readable date of a highlighted Unix timestamp.",
+	"description": "Showing a tooltip with a human readable date of a highlighted Unix timestamp.",
 	"version": "2.0.0",
 	"icons": {
 		"16": "icon.png",
